--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 3326:3306
     environment:
       MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: 123456
     volumes:
       - mysql:/var/lib/mysql
     security_opt:
