--- a/venda/src/main/resources/application.yml
+++ b/venda/src/main/resources/application.yml
@@ -1,1 +1,22 @@
+server:
+  port: 8081
+  servlet:
+     context-path: /pagamento
 
+spring:
+  application:
+    name: pagamento
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+##        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  jmx:
+    enabled: false
+  datasource:
+    url: jdbc:mysql://localhost:3326/pagamento?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
+    username: root
+    password: 123456
