--- a/crud/src/main/resources/application.yml
+++ b/crud/src/main/resources/application.yml
@@ -13,10 +13,31 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-##        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+##      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   jmx:
     enabled: false
   datasource:
     url: jdbc:mysql://localhost:3306/crud?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: root
     password: Dsskl101
+    
+# Rabbit MQ
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin
+      
+crud:
+  rabbitmq:
+    exchange: crud.exchange
+    routingkey: crud.produto.routingkey
+        
+    
+# EUREKA DISCOVERY
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/registry/eureka
