--- a/pagamento/src/main/resources/application.yml
+++ b/pagamento/src/main/resources/application.yml
@@ -20,3 +20,25 @@ spring:
     url: jdbc:mysql://localhost:3306/pagamento?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: root
     password: Dsskl101
+    
+# Rabbit MQ
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin
+
+crud:
+  rabbitmq:
+    exchange: crud.exchange
+    queue: crud.produto.queue
+        
+    
+# EUREKA DISCOVERY    
+    
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/registry/eureka        
