--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8083
   servlet:
-     context-path: /crud
+     context-path: /auth
 
 spring:
   application:
-    name: crud
+    name: auth
   jpa:
     show-sql: false
     hibernate:
@@ -17,24 +17,12 @@ spring:
   jmx:
     enabled: false
   datasource:
-    url: jdbc:mysql://localhost:3306/crud?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/auth?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: root
     password: Dsskl101
     
-# Rabbit MQ
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: admin
-    password: admin
-      
-crud:
-  rabbitmq:
-    exchange: crud.exchange
-    routingkey: crud.produto.routingkey
-        
+# EUREKA DISCOVERY    
     
-# EUREKA DISCOVERY
 eureka:
   instance:
     hostname: localhost
@@ -47,5 +35,4 @@ security:
   jwt:
     token:
       secret-key: CHAVE_ASSINATURA
-      expire-length: 3600000
-      
+      expire-length: 3600000             
