--- a/crud/src/main/resources/application.yml
+++ b/crud/src/main/resources/application.yml
@@ -12,14 +12,14 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-##      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+##        dialect: org.hibernate.dialect.MySQL8Dialect
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   jmx:
     enabled: false
   datasource:
     url: jdbc:mysql://localhost:3306/crud?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: root
-    password: Dsskl101
+    password: Dsskl101@
     
 # Rabbit MQ
   rabbitmq:
