--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
     enabled: false
   datasource:
     url: jdbc:mysql://localhost:3306/auth?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
-    username: root
-    password: Dsskl101@
+    username: microservices
+    password: microservices123
     
 # EUREKA DISCOVERY    
     
