--- a/pagamento/src/main/resources/application.yml
+++ b/pagamento/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
     enabled: false
   datasource:
     url: jdbc:mysql://localhost:3306/pagamento?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
-    username: root
-    password: Dsskl101@
+    username: microservices
+    password: microservices123
     
 # Rabbit MQ
   rabbitmq:
